kubernetes/apps/default/whoami/app/httproute.yaml
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: experiment
spec:
  hostnames: [whoami-test.movishell.pl]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: whoami-proxy
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: whoami.${PRIVATE_DOMAIN}
        # - type: RequestHeaderModifier
        #   requestHeaderModifier:
        #     remove: [Set-Cookie]
